<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wipod_nav</name>
  <version>0.0.0</version>
  <description>Navigation package for car with lidar and camera</description>
  <maintainer email="hssathyakailash.ec18@gmail.com">Kailash</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>nav2_voxel_grid</build_depend>
  <build_depend>nav2_smac_planner</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_smoother</build_depend>
  <build_depend>nav2_velocity_smoother</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>  <!-- Fix spelling -->
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
